--- a/static/css/listagemReserva.css
+++ b/static/css/listagemReserva.css
@@ -54,30 +54,6 @@ header {
     height: auto;
 }
 
-/* Barra de pesquisa */
-.search-container {
-    display: flex;
-    align-items: center;
-    background-color: var(--branco);
-    padding: 2px 20px;
-    border-radius: 25px;
-    width: 600px;
-}
-
-.search-container i {
-    color: black;
-    margin-right: 8px;
-    font-size: 1.2rem;
-}
-
-.search-box {
-    border: none;
-    outline: none;
-    font-size: 1.1rem;
-    width: 100%;
-    padding: 5px;
-    background-color: white;
-}
 .btn-catalogo {
     background-color: #3380ca;
 }
@@ -394,10 +370,6 @@ input:checked + .slider:before {
     padding: 2px 6px;
 }
 
-.btn:hover {
-    background-color: #ddd;
-}
-
 .menu-item { 
     display: flex;
     flex-direction: column; /* ← isso força tudo a ficar empilhado para baixo */
@@ -575,10 +547,10 @@ select {
 }
 
 #tabela-reservas thead th {
-    background-color: var(--azul-claro);
+    background-color: var(--primary-color);
     color: var(--branco);
     font-weight: bold;
-    border-bottom: 2px solid var(--azul-escuro);
+    border-bottom: 2px solid var(--dark-color);
 }
 
 #tabela-reservas tbody tr:hover {
@@ -624,7 +596,7 @@ button.botao-multas {
 }
 
 .botao-reserva {
-  --color: #3380ca;
+  color: var(--primary-color);
   background-color: white;
   font-family: inherit;
   display: flex;
@@ -637,20 +609,19 @@ button.botao-multas {
   position: relative;
   cursor: pointer;
   overflow: hidden;
-  border: 2px solid var(--azul);
+  border: 2px solid var(--primary-color);
   transition: color 0.5s;
   z-index: 1;
   font-size: 17px;
   font-weight: bold;
-  border-radius: 6px;
-  color: var(--azul);
+  border-radius: 25px;
 }
 
 .botao-reserva:before {
   content: "";
   position: absolute;
   z-index: -1;
-  background: var(--color);
+  background: var(--primary-color);
   height: 120px;
   width: 500px;
   border-radius: 50%;
@@ -672,7 +643,7 @@ button.botao-multas {
 }
 
 .botao-reserva:active:before {
-  background: #0060BB;
+  background: black;
   transition: background 0s;
 }
 
@@ -748,8 +719,6 @@ button.botao-multas {
 .botao-multar:hover {
     transform: scale(1.05);
 }
-
-
 
 .botao-historico {
     padding: 5px 10px;
@@ -908,7 +877,6 @@ label {
 
 .text {
     font-size: large;
-    margin-top: 10px;
 }
 
 .icons {
