--- a/templates/catalogo.html
+++ b/templates/catalogo.html
@@ -184,7 +184,7 @@
         <div class="header-left">
             <a id="logoHeader" href="home.html"><img id="logoImage" src="../static/img/logo.png" alt="Logo Asa Literária"></a>
         </div>
-        <form id="formBuscaLivro" class="search-form" style="display: flex;">
+        <form id="formBuscaLivro" class="search-form">
             <div class="search-container">
                 <i class="fas fa-search"></i>
                 <input type="text" id="campoBusca" placeholder="Pesquise seu livro..." class="search-box">
