muita melhoria fda

--- a/static/css/detalheReserva.css
+++ b/static/css/detalheReserva.css
@@ -185,7 +185,11 @@ input:checked+.slider:before {
 }
 
 .swal2-confirm {
-    background-color: var(--azul);
+    background-color: var(--primary-color);
+}
+
+.swal2-confirm:hover {
+    background-color: black;
 }
 
 .menu-icon {
