--- a/static/css/detalhesUsuario.css
+++ b/static/css/detalhesUsuario.css
@@ -448,7 +448,11 @@ header li a {
 }
 
 .swal2-confirm {
-    background-color: var(--azul);
+    background-color: var(--primary-color);
+}
+
+.swal2-confirm:hover {
+    background-color: black;
 }
 
 .modal-header {
