--- a/static/css/historicoMultas.css
+++ b/static/css/historicoMultas.css
@@ -427,8 +427,13 @@ input:checked + .slider:before {
 .linkedin {
     color: black;
 }
+
 .swal2-confirm {
-    background-color: var(--azul) !important;  
+    background-color: var(--primary-color);
+}
+
+.swal2-confirm:hover {
+    background-color: black;
 }
 
 .pagar-div {
