--- a/static/css/multas.css
+++ b/static/css/multas.css
@@ -35,6 +35,15 @@ body {
     font-family: Arial, sans-serif;
     background-color: #f5f5f5;
 }
+
+.swal2-confirm {
+    background-color: var(--primary-color);
+}
+
+.swal2-confirm:hover {
+    background-color: black;
+}
+
 .sair{
     background-color: #00010000;
     border: #00010000;
