--- a/static/css/cadastro.css
+++ b/static/css/cadastro.css
@@ -265,7 +265,11 @@ input::placeholder {
 }
 
 .swal2-confirm {
-    background-color: var(--azul) !important;
+    background-color: var(--primary-color);
+}
+
+.swal2-confirm:hover {
+    background-color: black;
 }
 
 #logoImage {
