--- a/static/css/emprestimos.css
+++ b/static/css/emprestimos.css
@@ -20,6 +20,15 @@ a{
   text-decoration: none;
   color:black;
 }
+
+.swal2-confirm {
+    background-color: var(--primary-color);
+}
+
+.swal2-confirm:hover {
+    background-color: black;
+}
+
 .sair{
   background-color: #00010000;
   border: #00010000;
