--- a/static/css/gerenciarMultas.css
+++ b/static/css/gerenciarMultas.css
@@ -12,6 +12,14 @@ a {
     color: black;
 }
 
+.swal2-confirm {
+    background-color: var(--primary-color);
+}
+
+.swal2-confirm:hover {
+    background-color: black;
+}
+
 :root {
     --azul: #3380ca;
     --azul-claro: #4292DC;
@@ -842,7 +850,7 @@ button.botao-multas {
 
 .btn-primary:hover {
     background-color: black;
-    transform: scale(1.05);
+    transform: translateY(-2px);
     transition: background-color 0.3s, transform 0.3s;
 }
 
