--- a/static/css/historico.css
+++ b/static/css/historico.css
@@ -74,7 +74,11 @@ body {
 }
 
 .swal2-confirm {
-    background-color: var(--azul);
+    background-color: var(--primary-color);
+}
+
+.swal2-confirm:hover {
+    background-color: black;
 }
 
 .swal2-cancel {
