--- a/static/css/home.css
+++ b/static/css/home.css
@@ -39,6 +39,14 @@ a {
     color: black;
 }
 
+.swal2-confirm {
+    background-color: var(--primary-color);
+}
+
+.swal2-confirm:hover {
+    background-color: black;
+}
+
 .sair {
     background-color: #00010000;
     border: #00010000;
@@ -1120,7 +1128,7 @@ a {
 
 .pagination-button {
     padding: 8px 15px;
-    background-color: var(--secondary-color);
+    background-color: var(--primary-color);
     color: white;
     border-radius: 5px;
     transition: var(--transition);
@@ -1130,7 +1138,7 @@ a {
 }
 
 .pagination-button:hover {
-    background-color: var(--primary-color);
+    background-color: black;
     transform: translateY(-2px);
 }
 
