--- a/static/css/livros.css
+++ b/static/css/livros.css
@@ -398,7 +398,11 @@ input:checked + .slider:before {
 }
 
 .swal2-confirm {
-    background-color: var(--azul);
+    background-color: var(--primary-color);
+}
+
+.swal2-confirm:hover {
+    background-color: black;
 }
 
 .swal2-cancel {
