--- a/static/css/login.css
+++ b/static/css/login.css
@@ -204,7 +204,11 @@ input::placeholder {
 }
 
 .swal2-confirm {
-    background-color: var(--azul) !important;
+    background-color: var(--primary-color);
+}
+
+.swal2-confirm:hover {
+    background-color: black;
 }
 
 #logoImage {
