--- a/static/css/multarUsuario.css
+++ b/static/css/multarUsuario.css
@@ -11,6 +11,15 @@ a{
     text-decoration: none;
     color:black;
 }
+
+.swal2-confirm {
+    background-color: var(--primary-color);
+}
+
+.swal2-confirm:hover {
+    background-color: black;
+}
+
 :root{
     --azul: #3380ca;
     --azul-claro: #4292DC;
