--- a/static/css/reservasAtuais.css
+++ b/static/css/reservasAtuais.css
@@ -22,6 +22,14 @@ a {
   color: black;
 }
 
+.swal2-confirm {
+    background-color: var(--primary-color);
+}
+
+.swal2-confirm:hover {
+    background-color: black;
+}
+
 .sair {
   background-color: #00010000;
   border: #00010000;
