--- a/static/css/visitante.css
+++ b/static/css/visitante.css
@@ -13,6 +13,15 @@ a{
     gap: 8px
     ;
 }
+
+.swal2-confirm {
+    background-color: var(--primary-color);
+}
+
+.swal2-confirm:hover {
+    background-color: black;
+}
+
 .sair{
     background-color: #00010000;
     border: #00010000;
