--- a/static/css/home.css
+++ b/static/css/home.css
@@ -755,7 +755,7 @@ footer {
 body {
     font-family: 'Poppins', sans-serif;
     color: var(--text-color);
-    background-color: #f5f5f5;
+    background-color: white;
     line-height: 1.6;
 }
 
