--- a/static/css/reserva.css
+++ b/static/css/reserva.css
@@ -80,10 +80,6 @@ a {
     padding: 2px 6px;
 }
 
-.btn:hover {
-    background-color: #ddd;
-}
-
 /* Header */
 header {
     background-color: #0060BB;
@@ -439,10 +435,18 @@ header li a {
 }
 
 .swal2-confirm {
-    background-color: var(--primary-color);
+    background-color: #e90039 !important;
 }
 
 .swal2-confirm:hover {
+    background-color: #af002c !important;
+}
+
+.swal2-cancel {
+    background-color: var(--primary-color);
+}
+
+.swal2-cancel:hover {
     background-color: black;
 }
 
@@ -538,14 +542,15 @@ h1 {
 }
 
 .filho2 {
-    margin-left: 50px;
-    padding: 15px;
+    margin-left: 20px;
+    padding: 15px 0px 15px 15px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
 }
 
 .filho1 {
     display: flex;
+    margin-left: 30px;
     flex-direction: column;
     align-items: center;
     gap: 10px;
@@ -587,18 +592,17 @@ h1 {
     color: var(--branco);
     margin-top: 20px;
     margin-bottom: 20px;
-    background-color: var(--azul);
-    border: 3px solid var(--azul);
-    border-radius: 5px;
+    background-color: var(--primary-color);
+    border: none;
+    border-radius: 25px;
     font-weight: bold;
     font-size: x-large;
     transition: 0.2s;
 }
 
 .botao-reserva:hover {
-    background-color: var(--azul-escuro);
-    border: 3px solid var(--azul-escuro);
-    transform: scale(1.05);
+    background-color: black;
+    transform: translateY(-2px);
     transition: 0.2s;
 }
 
@@ -985,7 +989,7 @@ form {
     font-weight: bold;
 }
 
-/* From Uiverse.io by vinodjangid07 */
+/* From Uiverse.io by vinodjangid07 */ 
 .btn-excluir {
   width: 50px;
   height: 50px;
@@ -1007,28 +1011,27 @@ form {
 }
 
 .svgIcon {
-    width: 12px;
-    transition-duration: 0.3s;
+  width: 12px;
+  transition-duration: 0.3s;
 }
 
 .svgIcon path {
-    fill: white;
+  fill: white;
 }
 
 .btn-excluir:hover {
-    transition-duration: 0.3s;
-    background-color: rgb(255, 69, 69);
-    align-items: center;
-    gap: 0;
+  transition-duration: 0.3s;
+  background-color: rgb(255, 69, 69);
+  align-items: center;
+  gap: 0;
 }
 
 .bin-top {
-    transform-origin: bottom right;
+  transform-origin: bottom right;
 }
-
 .btn-excluir:hover .bin-top {
-    transition-duration: 0.5s;
-    transform: rotate(160deg);
+  transition-duration: 0.5s;
+  transform: rotate(160deg);
 }
 
 
